--- a/.github/workflows/train_model_dev.yml
+++ b/.github/workflows/train_model_dev.yml
@@ -51,8 +51,7 @@ jobs:
         python -m pip install -r requirements.txt
         echo "Creating config file"
         mkdir .azureml
-        touch config.json
-        echo -e "{ \"subscription_id\": \"${{ secrets.AZURE_SUBSCRIPTION_ID }}\", \"resource_group\": \"CSAzureML\", \"workspace_name\": \"CSAzureML\" }"
+        echo -e "{ \"subscription_id\": \"${{ secrets.AZURE_SUBSCRIPTION_ID }}\", \"resource_group\": \"CSAzureML\", \"workspace_name\": \"CSAzureML\" }" > .azureml/config.json
         echo "Run training pipeline"
         # Run training pipeline
         python deploy-train.py
