--- a/.github/workflows/train_model_dev.yml
+++ b/.github/workflows/train_model_dev.yml
@@ -11,7 +11,8 @@ on:
   workflow_dispatch:
     inputs: {}
   push:
-    branches: [dev]
+    branches:
+      - dev
     paths:
       - Pipeline/config/**
       - Pipeline/scripts/**
